fix bold username for replyied comment not showing

--- a/src/CommentsSection/CommentsSection.style.css
+++ b/src/CommentsSection/CommentsSection.style.css
@@ -34,17 +34,17 @@ article p {
   grid-area: comment;
 }
 
+article p span {
+  color: var(--primary-moderate-blue);
+  font-weight: 500;
+}
+
 div.comment-container {
   display: flex;
   flex-direction: column;
   gap: 1rem;
   width: 100%;
   height: 100%;
-}
-
-div.comment-container p span {
-  color: var(--primary-moderate-blue);
-  font-weight: 700;
 }
 
 @media screen and (min-width: 768px) {
